--- a/gb/17/7/15/n9404850.md
+++ b/gb/17/7/15/n9404850.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ddzicu3392/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ddzicu3392/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ddzicu3392/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ddzicu3392/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ddzicu3392/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ddzicu3392/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ddzicu3392/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ddzicu3392/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ddzicu3392/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ddzicu3392/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ddzicu3392/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ddzicu3392/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ddzicu3392/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ddzicu3392/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ddzicu3392/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ddzicu3392/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ddzicu3392/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ddzicu3392/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ddzicu3392/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ddzicu3392/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ddzicu3392/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ddzicu3392/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ddzicu3392/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ddzicu3392/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>省电大作战！</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年07月15日讯】（大纪元记者卢晓雨悉尼综合报导）7月1日，新州的<ahref="https://github.com/ddzicu3392/djy/blob/master/gb/tag/%E7%94%B5%E8%B4%B9.md#1">电费</a>将有两位数（19.6%）的大幅上升，天然气费也增加6.6%，这可不是每个月少喝几杯咖啡就可以省下的开销。对<ahref="https://github.com/ddzicu3392/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E8%80%85.md#1">消费者</a>来说在这寒冷的冬天不啻又是一个雪上加霜的消息！</p>
-<p>2016/2017<ahref="https://github.com/ddzicu3392/djy/blob/master/gb/tag/%E8%B4%A2%E6%94%BF%E5%B9%B4%E5%BA%A6.md#1">财政年度</a>，<ahref="https://github.com/ddzicu3392/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>有超过三万的电力<ahref="https://github.com/ddzicu3392/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E8%80%85.md#1">消费者</a>和六千个天然气消费者，因无法缴交电气费被停电及停天然气。根据一项消费者民调最新报告表示（Choice Cosumer Pulse）四分之一的新州家庭为支付他们的家庭开销而挣扎于现有的薪水平衡中。相信很多消费者都有同样的感受，<ahref="https://github.com/ddzicu3392/djy/blob/master/gb/tag/%E7%94%B5%E8%B4%B9.md#1">电费</a>、购物费，个人所得税都将提高，就是薪水没跟着涨。</p>
+<p>【大纪元2017年07月15日讯】（大纪元记者卢晓雨悉尼综合报导）7月1日，新州的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B5%E8%B4%B9.md#1">电费</a>将有两位数（19.6%）的大幅上升，天然气费也增加6.6%，这可不是每个月少喝几杯咖啡就可以省下的开销。对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E8%80%85.md#1">消费者</a>来说在这寒冷的冬天不啻又是一个雪上加霜的消息！</p>
+<p>2016/2017<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B4%A2%E6%94%BF%E5%B9%B4%E5%BA%A6.md#1">财政年度</a>，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>有超过三万的电力<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E8%80%85.md#1">消费者</a>和六千个天然气消费者，因无法缴交电气费被停电及停天然气。根据一项消费者民调最新报告表示（Choice Cosumer Pulse）四分之一的新州家庭为支付他们的家庭开销而挣扎于现有的薪水平衡中。相信很多消费者都有同样的感受，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%94%B5%E8%B4%B9.md#1">电费</a>、购物费，个人所得税都将提高，就是薪水没跟着涨。</p>
 <p>在无法避免电力、天然气费的增加下，如何当个聪明的消费者，让我们一起来智慧的处理！</p>
 <h2>选择为适合你的电力公司</h2>
 <p>大部分的电力公司都提供10~20％电费折扣方案，方案条件为按时缴电费、在网上签订方案及自动转账方式付费等。聪明的消费者，当然是要货比三家才能开源节流。</p>
 <p>比方说，如果您家庭一季度（三个月）的电费为360澳元，最高折扣可节省65澳元即18%。</p>
-<p><ahref="https://github.com/ddzicu3392/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>最大财务分析网站Canster发言人赛门?唐斯（Simon Downes）说：“我们建议人们把优惠重点放在他们的电费使用（usage）部分和确定他们使用最优惠的方案。很多时候，更换不同的电力公司可使你节省上百块钱”。他强调“如果你的电力公司提供的条件仅止于市面上标准的方案，很大的机会是你付太多电费了”！</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>最大财务分析网站Canster发言人赛门?唐斯（Simon Downes）说：“我们建议人们把优惠重点放在他们的电费使用（usage）部分和确定他们使用最优惠的方案。很多时候，更换不同的电力公司可使你节省上百块钱”。他强调“如果你的电力公司提供的条件仅止于市面上标准的方案，很大的机会是你付太多电费了”！</p>
 <p>该网站比较不同电力公司五月的方案发现，动力（Momentum energy）及瑞德（Red Energy）两家电力公司是目前为止在悉尼为消费者提供最为便宜电费的公司，条件是用户按时付费，当然其它要考虑的因素还包括用户人口、是否使用瓦斯和大多什么时间使用。</p>
 <p>唐斯还告诉消费者，当选择不同的电力公司时，重点是把优惠放在“使用费用＊”（usage charge）的而不是放在“供应费用＊”(supply charge) 上。这表示，当你在节约能源时，可以在账单上明显看到电费下滑。（＊请看最后备注）</p>
 <p>想寻找最最适合自家电力公司的消费者，可使用澳洲能源独立比价的政府网站Energy Made Easy找到不同电力公司的最廉价的优惠方案，符合不同消费者的需求，让您不再多缴冤枉钱。根据该政府网站，新洲一家四口的家庭更换个适合的电力公司后，每年电费可省下高达700澳元的差额。当然还要视每户使用电量多少而定。</p>
@@ -106,42 +106,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/16/12/14/n8591404.md#1">澳洲新州家庭年电费或涨74元</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/17/2/27/n8852722.md#1">澳洲小企业电费10年翻倍 今年电费将更飙涨</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/17/6/23/n9297723.md#1">西澳家庭费用全面上涨 电费涨11%</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/17/6/29/n9332345.md#1">本周六起 澳洲电价大涨 南澳将全球最贵</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/17/6/29/n9336197.md#1">专家预测：南澳电价将成全球最高</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/17/7/4/n9351675.md#1">墨尔本寒冬 老人为省电费整日呆在床上</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/17/7/8/n9367155.md#1">堪培拉生活费用上涨 低收入者受影响最大</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/17/7/14/n9393923.md#1">澳二季批发电价大幅飙升  涨价或成常态</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/5/n12308461.md#1">共谍疑云曝光 华裔顾问与工党议员对话遭查</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/5/n12308369.md#1">澳洲暂不禁抖音 总理提醒使用者其背后是中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/12/14/n8591404.md#1">澳洲新州家庭年电费或涨74元</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/2/27/n8852722.md#1">澳洲小企业电费10年翻倍 今年电费将更飙涨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/23/n9297723.md#1">西澳家庭费用全面上涨 电费涨11%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/29/n9332345.md#1">本周六起 澳洲电价大涨 南澳将全球最贵</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/29/n9336197.md#1">专家预测：南澳电价将成全球最高</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/7/4/n9351675.md#1">墨尔本寒冬 老人为省电费整日呆在床上</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/7/8/n9367155.md#1">堪培拉生活费用上涨 低收入者受影响最大</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/7/14/n9393923.md#1">澳二季批发电价大幅飙升  涨价或成常态</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616236.md#1">首都政府拨款 协助俱乐部摆脱赌博经营模式</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616258.md#1">堪培拉家长频频报告快速抗原检测假阴性</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/6/n10032641.md#1" target="_blank">作恶者鉴：迫害法轮功终难逃法网</a></li><li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/12/24/n4042174.md#1" target="_blank">大陆民间这些惊人预言都指向同一件大事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/18/n11329746.md#1" target="_blank">传奇总统里根（10）：一封家书承载使命</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/7/n10897982.md#1" target="_blank">《求救信》感动欧洲议会观众：会哭很多次</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/4/n12306655.md#1">黎巴嫩首都爆炸 蘑菇云腾起 数千死伤</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/3/n12302964.md#1">中共高调宣传北斗导航 遭质疑窃全球数据</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/3/n12304599.md#1">主业受创 1800亿债务缠身 王健林成“首负”</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/4/n12305959.md#1">【拍案惊奇】美欲黄岩岛开战？闫丽梦再揭内幕</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/4/n12306881.md#1">【独家】党支部名单曝光 抖音何去何从</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/2/n12301758.md#1">录综艺节目累到脱妆 黄晓明真实相貌引热议</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/2/n12301702.md#1">景甜承认割双眼皮失败 直播中自嘲整成悲伤蛙</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/3/n12304220.md#1">“战狼”吴京主演 中共高调开拍反美片引嘲讽</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/2/n12301510.md#1">唐嫣产后首次公开亮相 亲口澄清宝宝性别</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/3/n12304444.md#1">59岁台湾艺人罗霈颖猝逝 死因待查</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/6/4/n12162213.md#1">【康熙大帝】康熙晚年与雍正嗣位</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/7/21/n12271399.md#1">【医案】迷迷红尘路</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/7/24/n12279753.md#1">落榜士子痛骂考官  因何转运金榜题名？</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/9/2/14/n2429943.md#1">一念不正招来妖孽</a></li>
-<li><a href="https://github.com/ddzicu3392/djy/blob/master/gb/20/8/3/n12304112.md#1">麒麟阁功臣榜排名第二 张安世“满而不溢”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ddzicu3392/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ddzicu3392/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/15/n9404850.htm">省电大作战！</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/15/n9404850.htm">省电大作战！</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/ddzicu3392/djy/blob/master/gb/17/7/15/n9404850.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ddzicu3392/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ddzicu3392/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ddzicu3392/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ddzicu3392/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ddzicu3392/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/7/15/n9404850.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
